# qaktus

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
backend/lambda/: conftest.py  generate_link.py  redirect.py  test_generate_link.py  test_redirect.py
backend/terraform/: api_gateway.tf  dynamodb.tf  lambda.tf  outputs.tf
research/: generate_short_url.ipynb  pick_url.ipynb
terraform/: api_gateway.tf  dynamodb.tf  lambda.tf  provider.tf
web-app/: package-lock.json  package.json
web-app/app/: layout.tsx  page.tsx
web-app/app/api/waitlist/: route.ts
web-app/components/: custom-weights-dialog.tsx  generated-url-display.tsx  navbar.tsx  url-form.tsx  url-input-row.tsx  waitlist-dialog.tsx  waitlist-form.tsx
web-app/lib/: supabase.ts
