[project]
name = "qaktus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["backend/lambda"]
addopts   = "-v"
